--- a/style.css
+++ b/style.css
@@ -12,3 +12,36 @@ body {
     justify-content: center;
     margin: 0;
 }
+
+.react {
+    width: 300px;
+    height: 100px;
+    border: 3px solid #61dafb;
+    border-radius: 50%;
+    position: relative;
+}
+
+.react::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 3px solid #61dafb;
+    border-radius: 50%;
+    transform: rotate(60deg);
+}
+
+.react::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 3px solid #61dafb;
+    border-radius: 50%;
+    transform: rotate(-60deg);
+}
+
