--- a/style.css
+++ b/style.css
@@ -45,3 +45,14 @@ body {
     transform: rotate(-60deg);
 }
 
+.circle {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #61dafb;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
